0.21.0 - 2016-03-29
--------------------------------------------------------------------

    * Name change: asock -> petrel

    * asock.Asock is now petrel.Handler

    * Null request and unknown command messages no longer return a
      list of known handlers. This exposed internal state. Users
      should implement their own 'help' type handler.


0.20.0 - 2016-03-09
--------------------------------------------------------------------

    * Oneshot connection mode is gone. It was a bad idea, torturously
      implemented.

    * Constructors now take *Config instead of Config.

    * Improvements to timeout handling (func call eliminated; no more
      local var creation and time.Duration casting on every network
      operation).


0.19.1 - 2015-12-10
--------------------------------------------------------------------

    * Small networking improvements


0.19.0 - 2015-12-10
--------------------------------------------------------------------

    * EOM is gone. All messages are now sent prefixed with their
      length in bytes as a 4 byte header.

    * pclient now used where possible for petrel test cases

    * Moved example client to the pclient package


0.18.0 - 2015-08-03
--------------------------------------------------------------------

    * Example server now includes a handler which returns an error.

    * Test coverage brought back up from rapid 0.16/0.17 dev cycles.

    * Documentation improvements


0.17.0 - 2015-06-18
--------------------------------------------------------------------

  Breaking changes

      * Dispatch is no longer a public type. As a result, it no longer
        appears in constructor calls and does not have to be
        instantiated by the user.

      * DispatchFunc is no longer a public type.  Dispatch functions
        are now added to Asock instances by calling the AddHandler()
        method.

      * Docs are all kinds of wrong right now. 0.18 will fix this.


0.16.1 - 2015-06-03