@@ -29,7 +29,7 @@ func TestEchoTCPServer(t *testing.T) {
 		t.Errorf("Socket name should be '127.0.0.1:50709' but got '%v'", as.s)
 	}
 	// load the echo func into the dispatch table
-	err = as.AddHandlerFunc("echo", "nosplit", echo)
+	err = as.AddHandlerFunc("echo", "blob", echo)
 	if err != nil {
 		t.Errorf("Couldn't add handler func: %v", err)
 	}
@@ -117,9 +117,9 @@ func TestEchoTCP6Server(t *testing.T) {
 	if as.s != "[::1]:50709" {
 		t.Errorf("Socket name should be '[::1]:50709' but got '%v'", as.s)
 	}
-	// load the echo func into the dispatch table, with argmode of
+	// load the echo func into the dispatch table, with mode of
 	// split this time
-	err = as.AddHandlerFunc("echo", "split", echo)
+	err = as.AddHandlerFunc("echo", "args", echo)
 	if err != nil {
 		t.Errorf("Couldn't add handler func: %v", err)
 	}
